--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.14.13",
     "@mui/styled-engine-sc": "^6.0.0-alpha.1",
     "apexcharts": "^3.44.0",
+    "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.0",
     "moment": "^2.29.4",
@@ -35,6 +36,7 @@
     "react-router": "^6.16.0",
     "react-router-dom": "^6.21.0",
     "react-tag-input-component": "^2.0.2",
+    "react-toastify": "^9.1.3",
     "recharts": "^2.8.0",
     "styled-components": "^6.1.0"
   },
