--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-re-super-tabs": "^1.1.0",
     "react-router": "^6.16.0",
     "react-router-dom": "^6.21.0",
+    "react-spinners": "^0.13.8",
     "react-tag-input-component": "^2.0.2",
     "react-toastify": "^9.1.3",
     "recharts": "^2.8.0",
