--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.1",
+    "react-lines-ellipsis": "^0.15.4",
     "react-quill": "^2.0.0",
     "react-rating-stars-component": "^2.2.0",
     "react-re-super-tabs": "^1.1.0",
